--- a/src/components/ImageInfo/ImageInfo.module.css
+++ b/src/components/ImageInfo/ImageInfo.module.css
@@ -1,22 +1,40 @@
 .Bar {
-    position: relative;
-    width: 100%;
+    width: 80%;
     min-height: 20vh;
     position: absolute;
     bottom: 0;
     right: 0;
     color: #333;
-    border-top: 1px solid #fff;
+    border-top-left-radius: 12px;
     background-color: rgba(17, 17, 17, 0.699);
     color: #fff;
-
+    display: block;
     transition: 0.5s all ease;
+    translate: translateY(0);
 }
+    .Title {
+        border-top-left-radius: 12px;
+        background: #111;
+        padding: 15px;
+        display: flex;
+        flex-flow: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+        .Author {
+            color: orange;
+            font-size: 15px;
+        }
     .Desc {
         padding: 30px;
+        padding-top: 10px;
         font-size: 15px;
         width: 95%;
         display: flex;
         flex-flow: row;
         align-items: center;
+    }
+    .Date {
+        color: orange;
+        font-size: 13px;
     }
